# md-reports

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
examples/: 01_quickstart.py  02_jinja_context.py  03_tables_and_csv.py  04_dataframe.py  05_reusable_converter.py  06_strict_mode.py  07_figures.py  08_properties.py  sample_report.md
examples/assets/: quarterly.csv
scripts/: build_default_template.py
src/md_ast_docx/: __init__.py  api.py  context.py  errors.py  model.py  options.py  parser.py  renderer.py  template.py
src/md_ast_docx/renderers/: __init__.py  base.py
src/md_ast_docx/renderers/docx/: __init__.py  renderer.py  template.py
src/md_ast_docx/resources/: default_template.docx
src/md_reports/: __init__.py  api.py  context.py  errors.py  model.py  options.py  parser.py
src/md_reports/renderers/: __init__.py  base.py
src/md_reports/renderers/docx/: __init__.py  renderer.py  template.py
src/md_reports/renderers/docx/resources/: default_template.docx
tests/: test_context.py  test_csv.py  test_dataframe.py  test_parser.py  test_properties.py  test_renderer.py  test_security.py  test_template.py
