[project]
name = "md-ast-docx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pythoro", email = "pythoro@mindquip.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
md-ast-docx = "md_ast_docx:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
