[project]
name = "md-reports"
version = "0.1.1"
description = "Render Markdown reports to multiple formats (DOCX, with pluggable renderers)"
readme = "README.md"
authors = [
    { name = "pythoro", email = "pythoro@mindquip.com" }
]
requires-python = ">=3.10"
dependencies = [
    # 3.1.5+ patches CVE-2024-22195, CVE-2024-34064, CVE-2024-56201,
    # and CVE-2025-27516. Do not relax this floor without a security
    # review.
    "jinja2>=3.1.5",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.5",
]
examples = [
    "matplotlib>=3.7",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
